--- a/styles.css
+++ b/styles.css
@@ -24,31 +24,38 @@ body {
   position: fixed;
   height: var(--height-header);
   width: 100%;
-  color: white;
+  color: black;
   padding-left: 10px;
 
   line-height: var(--height-header);
-  background: linear-gradient(to right, black, var(--color-green));
+  background: #e6e2d3;
   text-transform: capitalize;
   font-size: 2rem;
   letter-spacing: 2px;
+
+  margin-top: px;
+}
+input {
+  margin-right: 5px;
+  border: 2px;
 }
 .content {
   width: 100%;
-  height: 100%;
+  height: 60%;
   /* padding-top: var(--height-header); */
-  background-color: blanchedalmond;
+  background-color: #f0f0f0;
 
   display: flex;
 
   align-items: center;
 }
-.todolist {
-  height: var(--height-todolist);
-  width: var(--width-todolist);
-  background-color: var(--color-green);
+.list {
+  height: 60%;
+  width: 100%;
+  background-color: #e6e2d3;
   box-shadow: 5px 5px 5px black;
   border-radius: 5px;
+  display: flex;
   justify-content: space-around;
 
   /* position: fixed;
@@ -74,12 +81,12 @@ ul li {
   padding-left: 10px;
 }
 .todolist__header {
-  font-size: 1.6rem;
+  font-size: 1rem;
   text-align: center;
 }
 ul li {
   display: flex;
-  justify-content: space-between;
+  justify-content: right;
 }
 ul li deletebutton {
   height: 100px;
